# Curso_Next_Django

./: README.md
backend/: db.sqlite3  pyproject.toml
backend/accounts/: models.py
backend/accounts/migrations/: 0001_initial.py  0002_user_is_staff.py
backend/core/: settings.py  socketio.py  wsgi.py
